v0.63
[BUG] : Correct an XSS security issue on public search form

v0.62
[REFACTOR] : Use binary path from constant instead of hard coded value
[REFACTOR] : Move binary, databases and stopwords pathes from /automne_modules_files/ase to /automne/ase

v0.61
[BUG] : Correct a notice in standard interface
[REFACTOR] : Add support for 4.1.0

v0.60
[FEATURE] : Add Spanish and Portuguese messages

v0.59
[BUG] : If a xapian search has an error, exception was not catched

v0.58
[REFACTOR] : Remove extra whitespace from indexed content and displayed results text

v0.57
[BUG] : during installation process : parameters merge does not work

v0.56
[BUG] : indexing and search were sensitive to accents, and they should not

v0.55
[BUG] : in xapianIndexer.php : call to class gtandFather instead of grandFather

v0.54
[BUG] : Interfaces filters uses "AND" operator instead of "OR" in middle of "AND NOT" clause

v0.53
[BUG] : Content inside tags <option> are also indexed

v0.52
[BUG] : In files inserted in a standard file row : Old files are not properly deleted from index
[REFACTOR] : Review module tag help

v0.51
[BUG] : In files inserted in a standard file row : Returned URL does not use the correct website URL.

v0.50
[BUG] : Xapian DB files does not have correct rights.

v0.49
[BUG] : With ISO websites, if query contain a non ascii caracter

v0.48
[BUG] : Interfaces filters uses "OR" operator instead of "AND"
[REFACTOR] : Add website ID in configuration panel
[REFACTOR] : Add some cache on search results display

v0.47
[REFACTOR] : Adapt messages for Automne 4.0.0 format

v0.46
[BUG] : with HTML tags script and style which are encoded

v0.45
[BUG] : with some content having encoded entities

v0.44
[BUG] : with polyobject if APPLICATION_ENFORCES_ACCESS_CONTROL is active, then object compiled URL is not properly set

v0.43
[BUG] : with polyobject without ressource : not properly deleted
[BUG] : with indexed objects with errors : infinite index loop

v0.42