@@ -1,5 +1,6 @@
 v0.63
 [BUG] : Correct an XSS security issue on public search form
+[BUG] : Polymod modules which are not indexed launches useless scripts to remove some content from indexes
 
 v0.62
 [REFACTOR] : Use binary path from constant instead of hard coded value
